--- a/banners/languages/es_ES/messages.po
+++ b/banners/languages/es_ES/messages.po
@@ -360,8 +360,11 @@ msgstr "La posición ha sido establecida correctamente."
 msgid "The position can't be deleted, there are banners using it."
 msgstr "La posición no puede ser eliminada, hay banners usándola."
 
-msgid "All fields cannot be empty and From date has it be higher that To date."
-msgstr "Todos los campos no pueden estar vacíos y Desde tiene que ser mayor que Hasta."
+msgid "All fields cannot be empty."
+msgstr "Todos los campos no pueden estar vacíos."
+
+msgid "From date has it be higher that To date."
+msgstr "Desde tiene que ser mayor que Hasta."
 
 msgid "The banner is not in an available range."
 msgstr "El banner no está en un rango de fechas disponible."
@@ -392,9 +395,6 @@ msgstr "El banner se ha subido correctamente."
 
 msgid "An error has occurred to upload file, please try again. (%s)"
 msgstr "Un error ha ocurrido al subir el archivo, intente otra vez. (%s)"
-
-msgid "All fields cannot be empty."
-msgstr "Todos los campos no pueden estar vacíos."
 
 msgid "The plugin is now configured."
 msgstr "El plugin está configurado."
